[tool.poetry]
name = "windchiil-calculator"
version = "0.1.0"
description = ""
authors = ["legendisstillhere <ohavb985@hsd.k12.or.us>"]
readme = "README.md"
packages = [{include = "windchiil_calculator"}]

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.7.0"
pyqt6-qt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
